- terebon - fix playback when iframe embeds are missing
- hanime - fix thumbnails and poster requests
- hanime - fix playback when inline manifests change format
- peachurnet - add new JAV provider with navigation-aware listings, search integration, and direct playback fallbacks
- pornhub - fix Categories screen URL and sort the list alphabetically
- recu.me - add site with categories, search, and playback via the WordPress API
- thothub - ensure private videos trigger a real login instead of stopping at the PHP session cookie
- chaturbate - begin BeautifulSoup migration (room data & CSRF token parsing)


[B]Version 1.1.160[/B]
- settings: add StripChat option to always force highest quality


[B]Version 1.1.159[/B]
- stripchat - auto-select highest quality variant (prefer source, else highest resolution)


[B]Version 1.1.158[/B]
- stripchat - prefer external widget stream URL for more compatible CDN host


[B]Version 1.1.157[/B]
- stripchat - URL-encode IA headers (UA/Origin/Referer) for HLS


[B]Version 1.1.156[/B]
- stripchat - force InputStream Adaptive and add HLS headers to prevent early stop
- awmnet - update site list (48 sites)
- familypornhd - fix sound


[B]Version 1.1.155[/B]
- stripchat - add headers to HLS playback to prevent early stop


[B]Version 1.1.154[/B]
- xhamster - fix playback (play h264 streams instead of av1)
- eroticage - fix playback (xhmaster streams)
- pornhoarder - fix playback (select video host)
- awmnet - fix playback (xhmaster streams)
[B]Version 1.1.161[/B]
- add ThotHub site: browse, search, and ResolveURL playback
- StripChat: keep highest-quality option and stability fixes remain


[B]Version 1.1.162[/B]
- packaging: rebuild zip to correct top-level folder structure


[B]Version 1.1.163[/B]
- thothub - fix listing (recent videos), thumbs, and playback

[B]Version 1.1.164[/B]
- thothub - add robust listing fallback (videos/, page/1/, latest/) when homepage yields no items