@@ -1,0 +1,4 @@
+#LWP-Cookies-2.0
+Set-Cookie3: uridur="A9V9VMxYDsX2-1764301929"; path="/"; domain="anybunny.org"; path_spec; expires="2035-11-26 03:52:09Z"; version=0
+Set-Cookie3: validprsn=1764302656; path="/"; domain="anybunny.org"; path_spec; expires="2025-11-28 05:04:16Z"; version=0
+Set-Cookie3: tokende=1764302656; path="/"; domain="anybunny.org"; path_spec; expires="2025-11-28 10:04:16Z"; version=0
