@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.12.3
 executable = /usr/bin/python3.12
-command = /usr/bin/python3 -m venv /home/rpeters1428/repository.dobbelina/.venv
+command = /usr/bin/python3 -m venv /home/rpeters1428/Documents/repository.dobbelina/.venv
