@@ -1,4 +1,4 @@
-<addon id="plugin.video.cumination" name="Cumination" provider-name="Cumination" version="1.1.185">
+<addon id="plugin.video.cumination" name="Cumination" provider-name="Cumination" version="1.1.186">
     <requires>
         <import addon="xbmc.python" version="3.0.0" />
         <import addon="script.module.six" />
@@ -26,4 +26,3 @@
         </assets>
     </extension>
 </addon>
-
